--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_baseline_qr_code_24" />
     <item
         android:id="@+id/schedule"
-        android:title="Schedule"
+        android:title="Announcements"
         android:icon="@drawable/ic_baseline_calendar_today_24"/>
     <item
         android:id="@+id/about"
