--- a/app/src/main/res/layout/activity_display_qrcode.xml
+++ b/app/src/main/res/layout/activity_display_qrcode.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.31"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <Button
         android:id="@+id/backbtn"
