add save user data in sharedpreferences

--- a/app/src/main/res/layout/announcement_card_layout.xml
+++ b/app/src/main/res/layout/announcement_card_layout.xml
@@ -44,7 +44,7 @@
             android:paddingEnd="15dp"
             android:text="SHEEEEEESSSH! AM SO RITS YO MAGENGGENG, TO GUARIN HAPE BERTDIY TO YUUUUUUUUU, YU WANT DIS DIS? AM SO RITS YU MAGENGGENG"
             android:textColor="#000000"
-            android:textSize="16sp" />
+            android:textSize="17sp" />
 
         <TextView
             android:id="@+id/card_date"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/card_message"
             android:layout_marginTop="20dp"
-            android:background="#1A000000"
+            android:background="#28a745"
             android:fontFamily="sans-serif"
             android:gravity="center_vertical"
             android:paddingStart="15dp"
@@ -60,7 +60,7 @@
             android:paddingEnd="15dp"
             android:paddingBottom="10dp"
             android:text="03/13/2022"
-            android:textColor="#6c757d"
-            android:textSize="15sp" />
+            android:textColor="#fff"
+            android:textSize="16sp" />
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
