--- a/app/src/main/res/layout/activity_schedule_fragment.xml
+++ b/app/src/main/res/layout/activity_schedule_fragment.xml
@@ -29,7 +29,9 @@
             android:id="@+id/announcementRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_below="@+id/text_view_title"/>
+            android:layout_below="@+id/text_view_title"
+            android:clipToPadding="false"
+            android:paddingBottom="10dp"
+            android:layout_marginTop="20dp" />
     </RelativeLayout>
 </FrameLayout>
