fix information UI bug

--- a/app/src/main/res/layout/activity_generator_fragment.xml
+++ b/app/src/main/res/layout/activity_generator_fragment.xml
@@ -14,9 +14,9 @@
             android:id="@+id/textView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="60dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="40dp"
             android:fontFamily="sans-serif-black"
             android:text="Information Form"
             android:textAlignment="center"
@@ -30,9 +30,9 @@
         <EditText
             android:id="@+id/tf_age"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginTop="28dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:drawableLeft="@drawable/hashtag"
             android:drawablePadding="10dp"
             android:ems="10"
@@ -46,9 +46,9 @@
         <EditText
             android:id="@+id/tf_address"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:drawableLeft="@drawable/contact"
             android:drawablePadding="10dp"
             android:ems="10"
@@ -62,9 +62,9 @@
         <EditText
             android:id="@+id/tf_contact_number"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:drawableLeft="@drawable/phone"
             android:drawablePadding="10dp"
             android:ems="10"
@@ -78,9 +78,9 @@
         <EditText
             android:id="@+id/tf_purpose"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:drawableLeft="@drawable/clipboard"
             android:drawablePadding="10dp"
             android:ems="10"
@@ -94,9 +94,9 @@
         <EditText
             android:id="@+id/tf_temp"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:drawableLeft="@drawable/thermometer"
             android:drawablePadding="10dp"
             android:ems="10"
@@ -110,11 +110,11 @@
         <EditText
             android:id="@+id/tf_gender"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:drawableLeft="@drawable/gender"
             android:drawablePadding="10dp"
-            android:layout_marginTop="24dp"
             android:ems="10"
             android:hint="Gender"
             android:inputType="textPersonName"
@@ -125,21 +125,20 @@
 
         <Button
             android:id="@+id/btn_generate"
-            android:layout_width="0dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:text="Generate"
-            app:layout_constraintEnd_toEndOf="@+id/tf_temp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/tf_temp"
+            app:layout_constraintEnd_toEndOf="@+id/tf_gender"
+            app:layout_constraintStart_toStartOf="@+id/tf_gender"
             app:layout_constraintTop_toBottomOf="@+id/tf_gender" />
 
         <EditText
             android:id="@+id/tf_fullname"
             style="@style/Widget.AppCompat.EditText"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_marginTop="40dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:drawableLeft="@drawable/user"
             android:drawablePadding="10dp"
             android:ems="10"
