--- a/app/src/main/res/layout/activity_schedule_fragment.xml
+++ b/app/src/main/res/layout/activity_schedule_fragment.xml
@@ -17,7 +17,8 @@
             android:id="@+id/text_view_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="30dp"
             android:fontFamily="sans-serif-black"
             android:text="Announcement"
             android:textAlignment="center"
