--- a/app/src/main/res/layout/activity_about_fragment.xml
+++ b/app/src/main/res/layout/activity_about_fragment.xml
@@ -13,11 +13,11 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="283dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="60dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="30dp"
             android:fontFamily="sans-serif-black"
             android:text="About"
             android:textAlignment="center"
@@ -30,13 +30,16 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="287dp"
-            android:layout_height="322dp"
-            android:layout_marginTop="60dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="5dp"
             android:fontFamily="sans-serif-medium"
             android:text="Campus Logging System with QR Code for PHINMA UNIVERSITY OF PANGASINAN will be exclusive for the respective University only which can be adminstered by the Utility / Security personnel. The proposed system will be using QR (Quick Response) Code to get vistors' information. The application provides personal information form to fill out to create the user QR code. The code along with the users' identity taken by the application will be scanned by the University authorized personnel then will confirm and record the users' log, This will help with providing accurate and reliable reports by accessing student's / vistors' and promote awareness to individuals about the safety rules, security and productivity. Futhermore, the system for adminstrator's is a web-based system that manages information."
             android:textAlignment="center"
             android:textColor="#000000"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="@+id/textView2"
