disable dark mode

--- a/app/src/main/res/layout/activity_generator_fragment.xml
+++ b/app/src/main/res/layout/activity_generator_fragment.xml
@@ -53,7 +53,7 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="Address"
-            android:inputType="textPersonName"
+            android:inputType="textCapSentences"
             app:layout_constraintEnd_toEndOf="@+id/tf_age"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/tf_age"
@@ -85,7 +85,7 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="Purpose"
-            android:inputType="textPersonName"
+            android:inputType="textCapSentences"
             app:layout_constraintEnd_toEndOf="@+id/tf_contact_number"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/tf_contact_number"
@@ -117,7 +117,7 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="Gender"
-            android:inputType="textPersonName"
+            android:inputType="textCapSentences"
             app:layout_constraintEnd_toEndOf="@+id/tf_temp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/tf_temp"
@@ -127,8 +127,10 @@
             android:id="@+id/btn_generate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:text="Generate"
+            android:layout_marginTop="30dp"
+            android:text="Generate QR Code"
+            android:textAllCaps="false"
+            android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="@+id/tf_gender"
             app:layout_constraintStart_toStartOf="@+id/tf_gender"
             app:layout_constraintTop_toBottomOf="@+id/tf_gender" />
@@ -143,7 +145,7 @@
             android:drawablePadding="10dp"
             android:ems="10"
             android:hint="Full Name"
-            android:inputType="textPersonName"
+            android:inputType="textCapSentences"
             app:layout_constraintEnd_toEndOf="@+id/textView"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="@+id/textView"
