* User selfie before generation of QR Code * User confirmation of data privacy disclaimer * User guide

--- a/app/src/main/res/layout/activity_display_qrcode.xml
+++ b/app/src/main/res/layout/activity_display_qrcode.xml
@@ -21,8 +21,10 @@
         android:id="@+id/backbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back"
+        android:background="#8BC34A"
         android:onClick="backToForm"
+        android:text="Back"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
