--- a/app/src/main/res/layout/activity_generator_fragment.xml
+++ b/app/src/main/res/layout/activity_generator_fragment.xml
@@ -125,11 +125,13 @@
 
         <Button
             android:id="@+id/btn_generate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="171dp"
+            android:layout_height="45dp"
             android:layout_marginTop="30dp"
+            android:background="#8BC34A"
             android:text="Generate QR Code"
             android:textAllCaps="false"
+            android:textColor="#FFFFFF"
             android:textSize="17sp"
             app:layout_constraintEnd_toEndOf="@+id/tf_gender"
             app:layout_constraintStart_toStartOf="@+id/tf_gender"
