--- a/app/src/main/res/layout/activity_data_privacy.xml
+++ b/app/src/main/res/layout/activity_data_privacy.xml
@@ -16,7 +16,7 @@
     <WebView
         android:id="@+id/privacyId"
         android:layout_width="match_parent"
-        android:layout_height="461dp" />
+        android:layout_height="460dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,13 +33,13 @@
             android:text="Accept"
             android:textColor="@color/white" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/decline_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:layout_weight="1"
-            android:background="#FFFFFF"
+            android:background="#dc3545"
             android:text="Decline"
             android:textColor="#FFFFFF" />
     </LinearLayout>
